--- a/sass/utils/_container.scss
+++ b/sass/utils/_container.scss
@@ -4,7 +4,7 @@
       min-width: 320px;
    }
    @media screen and (min-width: 768px) and (max-width: 1279px) {
-      min-width: 768px;
+      width: 768px;
    }
    @media screen and (min-width: 1280px) {
       min-width: 1280px;
